fix(docs): text alignment

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
+  width: fit-content;
 }
 
 .node {
